# Vaulty-Core

./: .gitignore  CONTRIBUTING.md
.github/workflows/: contracts-ci.yml
Backend/: Dockerfile  README.md  docker-compose.yml  package.json
Backend/prisma/: schema.prisma
Backend/src/: app.ts  server.ts
Backend/src/config/: index.ts  redis.ts
Backend/src/controllers/: anchor.controller.ts  auth.controller.ts  transaction.controller.ts  vault.controller.ts
Backend/src/database/: index.ts
Backend/src/jobs/: index.ts
Backend/src/middleware/: errorHandler.ts  index.ts  validator.ts
Backend/src/queues/: index.ts
Backend/src/repositories/: payment-audit.repository.ts  payment.repository.ts  transaction.repository.ts  user.repository.ts  vault-event.repository.ts  vault-transaction.repository.ts  vault.repository.ts
Backend/src/routes/: anchor.routes.ts  auth.routes.ts  health.routes.ts  transaction.routes.ts  vault.routes.ts
Backend/tests/: setup.ts
Contract/: .gitignore  Cargo.toml  README.md
Contract/borrowing/src/: lib.rs
Contract/lending/src/: lib.rs
Contract/lending/tests/: test_lending.rs
Contract/rewards/src/: lib.rs
Contract/rewards/tests/: test_rewards.rs
Contract/shared/src/: errors.rs  events.rs  types.rs  utils.rs
Contract/streaks/src/: lib.rs
Contract/streaks/tests/: test_streaks.rs
Contract/tests/: lending_integration.rs
Contract/vault/src/: lib.rs
Contract/vault/tests/: test_vault.rs
Frontend/: .env.example  README.md  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts
(+55 files in other folders)
